--- a/style.css
+++ b/style.css
@@ -101,8 +101,12 @@ h1 {
 }
 
 button {
-    margin-top: 130px;
+    position: abslute;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
     border: 1px solid var(--secondary-color);
+    outline: 0;
     background-color: transparent;
     padding: 8px 15px;
     border-radius: 5px;
