--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;600;700&display=swap');
 
 * {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 :root {
@@ -17,12 +17,14 @@ body.dark {
 }
 
 body {
-	font-family: 'Karla', sans-serif;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	overflow: hidden;
-	margin: 0;
+    position: relative;
+    font-family: 'Karla', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+    margin: 0;
+    height: 100vh;
     background-color: var(--primary-color);
     transition: all 0.3s ease-in;
 }
@@ -101,7 +103,7 @@ h1 {
 }
 
 button {
-    position: abslute;
+    position: absolute;
     bottom: 30px;
     left: 50%;
     transform: translateX(-50%);
@@ -120,7 +122,7 @@ button {
 }
 
 button:active {
-    transform: scale(0.95);
+    transform: scale(0.98) translateX(-50%);
 }
 
 body.dark button {
